Configurar application properties da aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/
+spring.datasource.username=${USUARIO_BANCO}
+spring.datasource.password=${SENHA_BANCO}
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
