Vincular properties ao bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/
+spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/vicente_imoveis
 spring.datasource.username=${USUARIO_BANCO}
 spring.datasource.password=${SENHA_BANCO}
 
